@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2008  Vasco Nunes, Piotr Ożarowski
 
 
+2008-12-19  Michael Jahn
+	* OFDb movie plugin updated
+
 2008-12-16  Michael Jahn
 	* IMDB movie plugin updated
 
